# main.go
@@ -33,6 +33,8 @@ func main() {
 	r.GET("/users", searchUsers)
 	r.GET("/users/:id", findUserById)
 	r.POST("/users", createUser)
+	r.PUT("/users/:id", updateUser)
+	r.DELETE("/users/:id", deleteUserById)
 
 	r.Run()
 }
@@ -50,6 +52,11 @@ type UsersResponse struct {
 type CreateUserRequest struct {
 	Name string `json:"name" example:"test"`
 	Age  int    `json:"age" example:"20"`
+}
+
+type UpdateUserRequest struct {
+	Name string `json:"name" example:"test-name"`
+	Age  int    `json:"age" example:"21"`
 }
 
 type ErrorResponse struct {
@@ -83,7 +90,7 @@ func searchUsers(c *gin.Context) {
 // @produce json
 // @accept application/json
 // @param user_id path int true "user_id"
-// @router /users/:user_id [get]
+// @router /users/{user_id} [get]
 // @Success 200 {object} User
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
@@ -106,5 +113,38 @@ func findUserById(c *gin.Context) {
 // @Failure 400 {object} ErrorResponse
 // @Failure 422 {object} ErrorResponse
 func createUser(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{"user": "ok"})
+}
+
+// updateUser
+// @Summary update user
+// @description update user
+// @version 1.0
+// @tags users
+// @Accept  json
+// @produce json
+// @accept application/json
+// @param user_id path int true "user_id"
+// @param user body UpdateUserRequest true "user"
+// @router /users/{user_id} [put]
+// @Success 200 {object} User
+// @Failure 400 {object} ErrorResponse
+// @Failure 422 {object} ErrorResponse
+func updateUser(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{"user": "ok"})
+}
+
+// deleteUserById
+// @Summary delete user by user_id
+// @description delete user by user_id
+// @version 1.0
+// @tags users
+// @produce json
+// @accept application/json
+// @param user_id path int true "user_id"
+// @router /users/{user_id} [delete]
+// @Success 201 {object} User
+// @Failure 400 {object} ErrorResponse
+func deleteUserById(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"user": "ok"})
 }
